- Created Parent and child items and adapters for top MainFragment.kt - Created Card and simple article items - Added app icons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:authorities="com.mhss.app.mynews.androidx-startup"
             tools:node="remove">
         </provider>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
