--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     def work_version = "2.7.1"
     def room_version = "2.3.0"
     def lifecycle_version = "2.4.0"
+    def preference_version = "1.1.1"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
@@ -58,8 +59,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //Datastore
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    // Preferences
+    implementation "androidx.preference:preference-ktx:$preference_version"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
